# library_project

./: .gitignore  Dockerfile  dump.rdb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py  urls.py
nginx/: Dockerfile
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
