[tool.poetry]
name = "library-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
python-dotenv = "^1.0.1"
ipython = "^8.31.0"
pillow = "^11.1.0"
redis = "^5.2.1"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
